Fixed the size of scrollBar for the child Div

--- a/UserStoryFrontend/src/app/main-content/main-content.component.css
+++ b/UserStoryFrontend/src/app/main-content/main-content.component.css
@@ -22,3 +22,8 @@
     min-height: 10%;
     max-height:20%;
 }
+
+div::-webkit-scrollbar {
+    width: 2em;
+    height: 2em
+}
